--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -26,7 +26,7 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/users']">Users</a>
+            <a class="nav-link text-dark" [routerLink]="['/add-users']">Users</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/customers']">Customers</a>
@@ -38,7 +38,7 @@
             <a class="nav-link text-dark" [routerLink]="['/projects']">Projects</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/Analytics']">Analytics</a>
+            <a class="nav-link text-dark" [routerLink]="['/analytics']">Analytics</a>
           </li>
         </ul>
       </div>
