--- a/Bogholderen/src/app/users/add-users.component.html
+++ b/Bogholderen/src/app/users/add-users.component.html
@@ -1,1 +1,24 @@
-<h1>hejhej</h1>
+<div>
+  <label>First name</label>
+  <input />
+
+  <label>Last name</label>
+  <input />
+
+  <label>Username</label>
+  <input />
+
+  <label>Password</label>
+  <input />
+
+  <label>Phone</label>
+  <input />
+
+  <label>Email</label>
+  <input />
+
+  <label>Address id</label>
+  <input />
+
+</div>
+
