--- a/Bogholderen/src/app/home/home.component.html
+++ b/Bogholderen/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<h1>Hello, world!</h1>
+<h1>Hello, anders har en grim pik</h1>
+
+
+<img src="../../assets/Logos/anders.jpg" [routerLink]="['/']" />
