--- a/Bogholderen/src/app/users/add-users.component.html
+++ b/Bogholderen/src/app/users/add-users.component.html
@@ -3,40 +3,44 @@
 
     <div class="col-md-2">
       <label for="firstname">First name</label>
-      <input id="firstName" type="text" formControlName="firstName">
+      <input id="FirstName" type="text" formControlName="FirstName" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="lastname">Last name</label>
-      <input id="lastName" type="text" formControlName="lastName">
+      <input id="LastName" type="text" formControlName="LastName" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="username">Username</label>
-      <input id="userName" type="text" formControlName="userName">
+      <input id="UserName" type="text" formControlName="UserName" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="password">Password</label>
-      <input id="password" type="text" formControlName="password">
+      <input id="Password" type="text" formControlName="Password" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="phone">Phone</label>
-      <input id="phone" type="text" formControlName="phone">
+      <input id="Phone" type="text" formControlName="Phone" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="email">Email</label>
-      <input id="email" type="text" formControlName="email">
+      <input id="Email" type="text" formControlName="Email" class="form-control">
     </div>
 
     <div class="col-md-2">
       <label for="addressId">Address id</label>
-      <input id="addressId" type="text" formControlName="addressId">
+      <input id="AddressId" type="text" formControlName="AddressId" class="form-control">
     </div>
 
-    <button type="submit" [disabled]="!addUserForm.valid">Submit</button>
+    <br />
+
+    <div class="col-md-2">
+      <button type="submit" [disabled]="!addUserForm.valid" class="form-control">Submit</button>
+    </div>
   </form>
 </div>
 
