--- a/Bogholderen/src/app/users/add-users.component.html
+++ b/Bogholderen/src/app/users/add-users.component.html
@@ -2,38 +2,38 @@
   <form [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
 
     <div class="col-md-2">
-      <label for="firstname">First name</label>
+      <label for="FirstName">First name</label>
       <input id="FirstName" type="text" formControlName="FirstName" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="lastname">Last name</label>
+      <label for="LastName">Last name</label>
       <input id="LastName" type="text" formControlName="LastName" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="username">Username</label>
+      <label for="UserName">Username</label>
       <input id="UserName" type="text" formControlName="UserName" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="password">Password</label>
+      <label for="Password">Password</label>
       <input id="Password" type="text" formControlName="Password" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="phone">Phone</label>
-      <input id="Phone" type="text" formControlName="Phone" class="form-control">
+      <label for="Phone">Phone</label>
+      <input id="Phone" type="number" formControlName="Phone" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="email">Email</label>
+      <label for="Email">Email</label>
       <input id="Email" type="text" formControlName="Email" class="form-control">
     </div>
 
     <div class="col-md-2">
-      <label for="addressId">Address id</label>
-      <input id="AddressId" type="text" formControlName="AddressId" class="form-control">
+      <label for="AddressId">Address id</label>
+      <input id="AddressId" type="number" formControlName="AddressId" class="form-control">
     </div>
 
     <br />
