--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -26,7 +26,7 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/add-users']">Users</a>
+            <a class="nav-link text-dark" [routerLink]="['/users-overview']">Users</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/customers']">Customers</a>
