--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -1,4 +1,33 @@
-<div>
-  <h1>hej</h1>
-</div>
+<div class="container">
+  <button type="button" [routerLink]="'/add-users'" class="btn btn-info">Create new user</button>
+  <br><br>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Username</th>
+        <th>Password</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Address id</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{user.id}}</td>
+        <td>{{user.firstName}} {{user.lastName}}</td>
+        <td>{{user.userName}}</td>
+        <td>{{user.password}}</td>
+        <td>{{user.phone}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.address_id}}</td>
+        <td>
+          <!-- <a href="#" [routerLink]="['/post/', post.id, 'edit']" class="btn btn-primary">Edit</a> -->
+          <button type="button" (click)="DeleteUser(user.id)" class="btn btn-danger">Delete</button>
+        </td>
 
+      </tr>
+    </tbody>
+  </table>
+</div>
