--- a/Bogholderen/src/app/users/add-users.component.html
+++ b/Bogholderen/src/app/users/add-users.component.html
@@ -32,14 +32,14 @@
     </div>
 
     <div class="col-md-2">
-      <label for="AddressId">Address id</label>
-      <input id="AddressId" type="number" formControlName="AddressId" class="form-control">
+      <label for="Address_id">Address id</label>
+      <input id="Address_id" type="number" formControlName="Address_id" class="form-control">
     </div>
 
     <br />
 
     <div class="col-md-2">
-      <button type="submit" [disabled]="!addUserForm.valid" class="form-control">Submit</button>
+      <button type="submit" class="form-control">Submit</button>
     </div>
   </form>
 </div>
