--- a/Bogholderen/src/styles.css
+++ b/Bogholderen/src/styles.css
@@ -2,7 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-
+@import '~ngx-toastr/toastr.css';
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
