--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -14,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users">
+      <tr *ngFor="let user of users; let i = index;">
         <td>{{user.id}}</td>
         <td>{{user.firstName}} {{user.lastName}}</td>
         <td>{{user.userName}}</td>
@@ -24,7 +24,7 @@
         <td>{{user.address_id}}</td>
         <td>
           <!-- <a href="#" [routerLink]="['/post/', post.id, 'edit']" class="btn btn-primary">Edit</a> -->
-          <button type="button" (click)="DeleteUser(user.id)" class="btn btn-danger">Delete</button>
+          <button type="button" (click)="DeleteUser(i + 1)" class="btn btn-danger">Delete</button>
         </td>
 
       </tr>
