--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <button type="button" [routerLink]="'/add-users'" class="btn btn-info">Create new user</button>
+  <p>test</p>
   <br><br>
   <table class="table table-striped table-bordered">
     <thead>
