--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <button type="button" [routerLink]="'/add-users'" class="btn btn-info">Create new user</button>
   <br><br>
-  <p>emmtopsa</p>
+  <p>emmas</p>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users; let i = index;">
+      <tr *ngFor="let user of users; let i = index + 1;">
         <td>{{user.id}}</td>
         <td>{{user.firstName}} {{user.lastName}}</td>
         <td>{{user.userName}}</td>
@@ -25,7 +25,7 @@
         <td>{{user.address_id}}</td>
         <td>
           <!-- <a href="#" [routerLink]="['/post/', post.id, 'edit']" class="btn btn-primary">Edit</a> -->
-          <button type="button" (click)="DeleteUser(i + 1)" class="btn btn-danger">Delete</button>
+          <button type="button" (click)="DeleteUser(i)" class="btn btn-danger">Delete</button>
         </td>
 
       </tr>
