--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <button type="button" [routerLink]="'/add-users'" class="btn btn-info">Create new user</button>
   <br><br>
-  <p>emmas</p>
+  <p>emma</p>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -24,7 +24,7 @@
         <td>{{user.email}}</td>
         <td>{{user.address_id}}</td>
         <td>
-          <!-- <a href="#" [routerLink]="['/post/', post.id, 'edit']" class="btn btn-primary">Edit</a> -->
+          <!-- <a href="#" [routerLink]="['/users/', i + 1, 'edit-user']" class="btn btn-primary">Edit</a> -->
           <button type="button" (click)="DeleteUser(i + 1)" class="btn btn-danger">Delete</button>
         </td>
 
