--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -8,12 +8,12 @@
     <thead>
       <tr>
         <th>Id</th>
-        <th>Name</th>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Address id</th>
+        <th>{{ 'users.name' | translate}}</th>
+        <th>{{ 'users.username' | translate}}</th>
+        <th>{{ 'users.password' | translate}}</th>
+        <th>{{ 'users.phone' | translate}}</th>
+        <th>{{ 'users.email' | translate}}</th>
+        <th>{{ 'users.address_id' | translate}}</th>
       </tr>
     </thead>
     <tbody>
