--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -39,9 +39,8 @@
             <a class="nav-link text-dark" [routerLink]="['/analytics']">{{ 'management.title' | translate}}</a>
           </li>
         </ul>
-
-        <button (click)="useLanguage('en')">en</button>
-        <button (click)="useLanguage('da')">da</button>
+        <button (click)="useLanguage('en')">EN</button>
+        <button (click)="useLanguage('da')">DA</button>
       </div>
     </div>
   </nav>
