create, update, delete virker med address

--- a/Bogholderen/src/app/users/update-users.component.html
+++ b/Bogholderen/src/app/users/update-users.component.html
@@ -32,10 +32,29 @@
     </div>
 
     <div class="col-md-2">
-      <label for="Address_id">{{ 'users.address_id' | translate}}</label>
-      <input id="Address_id" type="number" formControlName="Address_id" class="form-control">
+      <label for="AddressLine1">{{ 'address.addressline1' | translate}}</label>
+      <input id="AddressLine1" type="text" formControlName="AddressLine1" class="form-control">
     </div>
 
+    <div class="col-md-2">
+      <label for="AddressLine2">{{ 'address.addressline2' | translate}}</label>
+      <input id="AddressLine2" type="text" formControlName="AddressLine2" class="form-control">
+    </div>
+
+    <div class="col-md-2">
+      <label for="Country">{{ 'address.country' | translate}}</label>
+      <input id="Country" type="text" formControlName="Country" class="form-control">
+    </div>
+
+    <div class="col-md-2">
+      <label for="City">{{ 'address.city' | translate}}</label>
+      <input id="City" type="text" formControlName="City" class="form-control">
+    </div>
+
+    <div class="col-md-2">
+      <label for="ZipCode">{{ 'address.zipcode' | translate}}</label>
+      <input id="ZipCode" type="text" formControlName="ZipCode" class="form-control">
+    </div>
     <br />
 
     <div class="col-md-2">
