--- a/Bogholderen/src/app/users/users-overview.component.html
+++ b/Bogholderen/src/app/users/users-overview.component.html
@@ -13,7 +13,7 @@
         <th>{{ 'users.password' | translate}}</th>
         <th>{{ 'users.phone' | translate}}</th>
         <th>{{ 'users.email' | translate}}</th>
-        <!--<th>{{ 'users.address_id' | translate}}</th>-->
+        <th>{{ 'users.address' | translate}}</th>
       </tr>
     </thead>
     <tbody>
@@ -24,7 +24,7 @@
         <td>{{user.password}}</td>
         <td>{{user.phone}}</td>
         <td>{{user.email}}</td>
-        <!--<td>{{user.address_id}}</td>-->
+        <td>{{user.addressLine1}}, {{user.city}}</td>
         <td>
           <a href="#" [routerLink]="['/update-users', user.id]" class="btn btn-primary">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
