--- a/Bogholderen/src/app/home/home.component.html
+++ b/Bogholderen/src/app/home/home.component.html
@@ -1,2 +1,31 @@
+<div>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
+    <div class="col-md-2">
+      <label for="UserName">{{ 'users.username' | translate}}</label>
+      <input id="UserName" type="text" formControlName="UserName" class="form-control">
+      <div *ngIf="userName?.invalid && (userName?.dirty || userName?.touched)" class="alert alert-danger">
+        <div *ngIf="userName?.errors">
+          {{ 'users.username' | translate}} {{ 'shared.required' | translate}}
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-2">
+      <label for="Password">{{ 'users.password' | translate}}</label>
+      <input id="Password" type="text" formControlName="Password" class="form-control">
+      <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="alert alert-danger">
+        <div *ngIf="password?.errors">
+          {{ 'users.password' | translate}} {{ 'shared.required' | translate}}
+        </div>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="col-md-2">
+      <button type="submit" [disabled]="loginForm.invalid" class="form-control">Submit</button>
+    </div>
+  </form>
+</div>
 
