--- a/Bogholderen/src/app/users/add-users.component.css
+++ b/Bogholderen/src/app/users/add-users.component.css
@@ -1,2 +1,10 @@
-﻿body {
+body {
 }
+
+button:disabled,
+button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
