--- a/Bogholderen/src/app/users/add-users.component.html
+++ b/Bogholderen/src/app/users/add-users.component.html
@@ -1,121 +1,127 @@
 <div>
   <form [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
-
-    <div class="col-md-2">
-      <label for="FirstName">{{ 'users.firstname' | translate}}</label>
-      <input id="FirstName" type="text" formControlName="FirstName" class="form-control">
-      <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="alert alert-danger">
-        <div *ngIf="firstName?.errors">
-          {{ 'users.firstname' | translate}} {{ 'shared.required' | translate}}
+    <div>
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="FirstName" type="text" formControlName="FirstName" class="form-control" placeholder="{{ 'users.firstname' | translate}}">
+          <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="alert alert-danger">
+            <div *ngIf="firstName?.errors">
+              {{ 'users.firstname' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
-        </div>
-      </div>
 
-    <div class="col-md-2">
-      <label for="LastName">{{ 'users.lastname' | translate}}</label>
-      <input id="LastName" type="text" formControlName="LastName" class="form-control">
-      <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="alert alert-danger">
-        <div *ngIf="lastName?.errors">
-          {{ 'users.lastname' | translate}} {{ 'shared.required' | translate}}
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-2">
-      <label for="UserName">{{ 'users.username' | translate}}</label>
-      <input id="UserName" type="text" formControlName="UserName" class="form-control">
-      <div *ngIf="userName?.invalid && (userName?.dirty || userName?.touched)" class="alert alert-danger">
-        <div *ngIf="userName?.errors">
-          {{ 'users.username' | translate}} {{ 'shared.required' | translate}}
+        <div class="p-2">
+          <input id="LastName" type="text" formControlName="LastName" class="form-control" placeholder="{{ 'users.lastname' | translate}}">
+          <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="alert alert-danger">
+            <div *ngIf="lastName?.errors">
+              {{ 'users.lastname' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-md-2">
-      <label for="Password">{{ 'users.password' | translate}}</label>
-      <input id="Password" type="text" formControlName="Password" class="form-control">
-      <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="alert alert-danger">
-        <div *ngIf="password?.errors">
-          {{ 'users.password' | translate}} {{ 'shared.required' | translate}}
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="Phone" type="number" formControlName="Phone" class="form-control" placeholder="{{ 'users.phone' | translate}}">
+          <div *ngIf="phone?.invalid && (phone?.dirty || phone?.touched)" class="alert alert-danger">
+            <div *ngIf="phone?.errors">
+              {{ 'users.phone' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="col-md-2">
-      <label for="Phone">{{ 'users.phone' | translate}}</label>
-      <input id="Phone" type="number" formControlName="Phone" class="form-control">
-      <div *ngIf="phone?.invalid && (phone?.dirty || phone?.touched)" class="alert alert-danger">
-        <div *ngIf="phone?.errors">
-          {{ 'users.phone' | translate}} {{ 'shared.required' | translate}}
+        <div class="p-2">
+          <input id="Email" type="text" formControlName="Email" class="form-control" placeholder="{{ 'users.email' | translate}}">
+          <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="alert alert-danger">
+            <div *ngIf="email?.errors">
+              {{ 'users.email' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-2">
-      <label for="Email">{{ 'users.email' | translate}}</label>
-      <input id="Email" type="text" formControlName="Email" class="form-control">
-      <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="alert alert-danger">
-        <div *ngIf="email?.errors">
-          {{ 'users.email' | translate}} {{ 'shared.required' | translate}}
+    <div>
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="UserName" type="text" formControlName="UserName" class="form-control" placeholder="{{ 'users.username' | translate}}">
+          <div *ngIf="userName?.invalid && (userName?.dirty || userName?.touched)" class="alert alert-danger">
+            <div *ngIf="userName?.errors">
+              {{ 'users.username' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+
+        <div class="p-2">
+          <input id="Password" type="text" formControlName="Password" class="form-control" placeholder="{{ 'users.password' | translate}}">
+          <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="alert alert-danger">
+            <div *ngIf="password?.errors">
+              {{ 'users.password' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-2">
-      <label for="AddressLine1">{{ 'address.addressline1' | translate}}</label>
-      <input id="AddressLine1" type="text" formControlName="AddressLine1" class="form-control">
-      <div *ngIf="addressLine1?.invalid && (addressLine1?.dirty || addressLine1?.touched)" class="alert alert-danger">
-        <div *ngIf="addressLine1?.errors">
-          {{ 'address.addressline1' | translate}} {{ 'shared.required' | translate}}
+    <div>
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="AddressLine1" type="text" formControlName="AddressLine1" class="form-control" placeholder="{{ 'address.addressline1' | translate}}">
+          <div *ngIf="addressLine1?.invalid && (addressLine1?.dirty || addressLine1?.touched)" class="alert alert-danger">
+            <div *ngIf="addressLine1?.errors">
+              {{ 'address.addressline1' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+
+        <div class="p-2">
+          <input id="AddressLine2" type="text" formControlName="AddressLine2" class="form-control" placeholder="{{ 'address.addressline2' | translate}}">
+          <div *ngIf="addressLine2?.invalid && (addressLine2?.dirty || addressLine2?.touched)" class="alert alert-danger">
+            <div *ngIf="addressLine2?.errors">
+              {{ 'address.addressline2' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="Country" type="text" formControlName="Country" class="form-control" placeholder="{{ 'address.country' | translate}}">
+          <div *ngIf="country?.invalid && (country?.dirty || country?.touched)" class="alert alert-danger">
+            <div *ngIf="country?.errors">
+              {{ 'address.country' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+
+        <div class="p-2">
+          <input id="City" type="text" formControlName="City" class="form-control" placeholder="{{ 'address.city' | translate}}">
+          <div *ngIf="city?.invalid && (city?.dirty || city?.touched)" class="alert alert-danger">
+            <div *ngIf="city?.errors">
+              {{ 'address.city' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <input id="ZipCode" type="text" formControlName="ZipCode" class="form-control" placeholder="{{ 'address.zipcode' | translate}}">
+          <div *ngIf="zipCode?.invalid && (zipCode?.dirty || zipCode?.touched)" class="alert alert-danger">
+            <div *ngIf="zipCode?.errors">
+              {{ 'address.zipcode' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-2">
-      <label for="AddressLine2">{{ 'address.addressline2' | translate}}</label>
-      <input id="AddressLine2" type="text" formControlName="AddressLine2" class="form-control">
-      <div *ngIf="addressLine2?.invalid && (addressLine2?.dirty || addressLine2?.touched)" class="alert alert-danger">
-        <div *ngIf="addressLine2?.errors">
-          {{ 'address.addressline2' | translate}} {{ 'shared.required' | translate}}
-        </div>
+    <br />
+    <div class="d-flex flex-row">
+      <div class="p-2">
+        <button type="submit" [disabled]="addUserForm.invalid" class="btn btn-primary">Submit</button>
       </div>
     </div>
-
-    <div class="col-md-2">
-      <label for="Country">{{ 'address.country' | translate}}</label>
-      <input id="Country" type="text" formControlName="Country" class="form-control">
-      <div *ngIf="country?.invalid && (country?.dirty || country?.touched)" class="alert alert-danger">
-        <div *ngIf="country?.errors">
-          {{ 'address.country' | translate}} {{ 'shared.required' | translate}}
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-2">
-      <label for="City">{{ 'address.city' | translate}}</label>
-      <input id="City" type="text" formControlName="City" class="form-control">
-      <div *ngIf="city?.invalid && (city?.dirty || city?.touched)" class="alert alert-danger">
-        <div *ngIf="city?.errors">
-          {{ 'address.city' | translate}} {{ 'shared.required' | translate}}
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-2">
-      <label for="ZipCode">{{ 'address.zipcode' | translate}}</label>
-      <input id="ZipCode" type="text" formControlName="ZipCode" class="form-control">
-      <div *ngIf="zipCode?.invalid && (zipCode?.dirty || zipCode?.touched)" class="alert alert-danger">
-        <div *ngIf="zipCode?.errors">
-          {{ 'address.zipcode' | translate}} {{ 'shared.required' | translate}}
-        </div>
-      </div>
-    </div>
-
-      <br />
-
-      <div class="col-md-2">
-        <button type="submit" [disabled]="addUserForm.invalid" class="form-control">Submit</button>
-      </div>
-</form>
+  </form>
 </div>
 
