--- a/Bogholderen/src/app/employees/employees-overview.component.html
+++ b/Bogholderen/src/app/employees/employees-overview.component.html
@@ -21,7 +21,7 @@
         <td>{{employee.id}}</td>
         <td>{{employee.firstName}} {{employee.lastName}}</td>
         <td>{{employee.jobTitle}}</td>
-        <td>{{employee.salary}}</td>
+        <td>{{employee.salary}}.-</td>
         <td>{{employee.phone}}</td>
         <td>{{employee.email}}</td>
         <td>{{employee.addressLine1}}, {{employee.city}}</td>
