user/employees/customers/projects crud done

--- a/Bogholderen/src/app/projects/projects-overview.component.html
+++ b/Bogholderen/src/app/projects/projects-overview.component.html
@@ -22,10 +22,10 @@
         <td>{{project.id}}</td>
         <td>{{project.projectName}}</td>
         <td>{{project.startDate}}</td>
-        <td>{{project.deadlineDate}}.-</td>
+        <td>{{project.deadlineDate}}</td>
         <td>{{project.estimatedHours}}</td>
-        <td>{{project.hourPrice}}</td>
-        <td>{{project.projectPrice}}</td>
+        <td>{{project.hourPrice}}.-</td>
+        <td>{{project.projectPrice}}.-</td>
         <td>{{project.hoursSpend}}</td>
         <td>
           <a href="#" [routerLink]="['/update-projects', project.id]" class="btn btn-primary">
