--- a/Bogholderen/src/app/management/management-overview.component.html
+++ b/Bogholderen/src/app/management/management-overview.component.html
@@ -1,8 +1,10 @@
-<nb-tabset>
-  <nb-tab tabTitle="Simple Tab #1">
-    Tab content 1
-  </nb-tab>
-  <nb-tab tabTitle="Simple Tab #2">
-    Tab content 2
-  </nb-tab>
-</nb-tabset>
+
+<div class="container">
+  <h3>Inline List</h3>
+  <ul class="list-inline">
+    <li><a [routerLink]="['/users-overview']">Home</a></li>
+    <li><a href="#">Menu 1</a></li>
+    <li><a href="#">Menu 2</a></li>
+    <li><a href="#">Menu 3</a></li>
+  </ul>
+</div>
