hours registration complete

--- a/Bogholderen/src/app/home/home.component.html
+++ b/Bogholderen/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center" *ngIf="!isLoggedIn">
+<!--<div class="d-flex justify-content-center" *ngIf="!isLoggedIn">
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
   <div class="d-flex row col-md-6">
@@ -33,3 +33,4 @@
 
   <p>welcome back my friend</p>
 </div>
+  -->
